<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/imageNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:hint="@string/add_notice"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/imageCreatedAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity=""
                android:padding="8dp"
                android:text="@string/image_created_at"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/editImageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/edit_time"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/imageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:text="Tên ảnh"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/imageCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/capacity"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pointDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/point_divider"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/imageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/image_size"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/imageLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:onClick="addLocation"
        android:padding="8dp"
        android:text="@string/add_location"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>



