<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/buttonAddToAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_album"
        style="@style/AppTonalButton"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonSetAsWallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_as_wallpaper"
        style="@style/AppTonalButton"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</LinearLayout>
